<?xml version="1.0"?>
<package>
  <name>ensenso_nx</name>
    <version>0.0.0</version>
    <description>
       Point cloud acquisition from Ensenso Nx cameras. Camera acquisition can be configured as as a publisher or as a service.
    </description>

    <maintainer email="andreu@beta-robots.com">Andreu Corominas-Murtra</maintainer>

    <license>BSD</license>

    <url type="website">https://github.com/beta-robots/ensenso_nx</url>

    <author email="andreu@beta-robots.com">Andreu Corominas-Murtra</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>actionlib_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>message_runtime</run_depend>
	<run_depend>message_generation</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>actionlib_msgs</run_depend>

    <export>
    </export>
</package>
